<!--
  ~ Copyright (c) 2021 Eugene Glushankov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="button_ok">OK</string>
    <string name="button_undo">Undo</string>

    <string name="about_label_connect_on_linked_id">Connect on LinkedIn</string>
    <string name="about_label_send_email">Send an Email</string>
    <string name="about_label_libraries">Libraries</string>
    <string name="about_label_version">Version: %1$s</string>
    <string name="about_label_app_description">A simple way to create your own nickname</string>
    <string name="about_label_privacy_policy">Privacy Policy</string>
    <string name="about_label_third_party_libraries">Third-Party Libraries</string>
    <string name="about_label_contacts">Contacts</string>
    <string name="about_label_developer_location">Minsk, Belarus</string>
    <string name="about_label_author">Author</string>

    <string name="main_button_gender_male">Male</string>
    <string name="main_button_gender_female">Female</string>
    <string name="main_button_generate">Generate</string>
    <string name="main_button_alphabet_cyrillic">Cyrillic</string>
    <string name="main_button_alphabet_latin">Latin</string>

    <string name="main_label_gender">Gender</string>
    <string name="main_label_alphabet">Alphabet</string>
    <string name="main_label_length">Length</string>
    <string name="main_label_copy">Tap to copy</string>

    <string name="main_action_about">About</string>

    <string name="favorites_label_empty_state_title">No Favorites Yet</string>
    <string name="favorites_label_empty_state_description">Tap the \'Star\' icon on Home page to add a favorite</string>

    <string name="descr_application_icon">Application icon</string>
    <string name="descr_contact_row_image">Contact row image</string>
    <string name="descr_logo_image">Icon Logo</string>
    <string name="descr_favorites_empty_state_icon">Empty state icon</string>

    <string name="message_copied_to_clipboard">Copied to clipboard</string>
    <string name="message_remove_back">Remove back?</string>
    <string name="message_confirm_back">Press \'back\' again to exit.</string>
    <string name="action_home">Home</string>
    <string name="action_favorites">Favorites</string>
    <string name="button_history">History</string>

    <string name="main_action_settings">Settings</string>

    <!--    Preferences-->
    <string name="settings_label_language">Language</string>
    <string name="settings_label_group">General</string>

    <string-array name="language_entries">
        <item>English</item>
        <item>Русский</item>
        <item>Беларуская</item>
        <item>Українська</item>
    </string-array>

    <string-array name="language_values" translatable="false">
        <item>en</item>
        <item>ru</item>
        <item>be</item>
        <item>uk</item>
    </string-array>

    <string name="label_clipboard_copy" translatable="false">Nickname: </string>
    <string name="label_application_name" translatable="false">Nicknamer</string>
    <string name="label_app_name_without_first_letter" translatable="false">icknamer</string>

    <string name="preference_option_key_theme" translatable="false">preference_key_theme</string>
    <string name="preference_option_key_language" translatable="false">preference_key_language</string>

    <string name="preference_option_title_dark_theme">Theme</string>
    <string name="preference_option_theme_dialog_title">Choose theme</string>

    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>

    <string-array name="theme_values">
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

</resources>
