<!--
  ~ Copyright (c) 2021 Eugene Glushankov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_label_group">

        <ListPreference
            app:icon="@drawable/ic_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/preference_option_key_language"
            app:title="@string/settings_label_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_invert_colors"
            android:dialogTitle="@string/preference_option_theme_dialog_title"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="@string/preference_option_key_theme"
            app:useSimpleSummaryProvider="true"
            android:title="@string/preference_option_title_dark_theme"/>
    </PreferenceCategory>
</PreferenceScreen>